[core] Take the global locale decision out of the text subsystem (P8, P10, P11)
P8 — Loading StringDatabase changed the number format of the entire
process: its constructor called Locale.setDefault(FORMAT, ENGLISH), and
INSTANCE is a static field, so merely mentioning the class was enough. A
subsystem that holds texts should not decide, as a side effect of class
initialisation, how every String.format of the process writes its numbers —
least of all for someone using OpenMarkov as a library. The decision now
lives where it belongs, in the first line of OpenMarkov.main, in the open
and with its reason written down. The desktop application therefore behaves
exactly as before.

This one is worth checking rather than believing: the whole suite was run
on a machine whose locale is es_ES, where a decimal comma would show up
immediately, and all 18 modules pass.

P10 — The listeners of the locale change lived in a plain ArrayList, so
registering or firing from different threads could throw
ConcurrentModificationException; they are now in a CopyOnWriteArrayList,
which is exactly the shape of that list (many reads, hardly any writes).
getAllBundles did its lazy initialisation unsynchronised, so two threads
could compute the bundles at once; it and resetBundles are now synchronized.

P11 — Hygiene: the mapping language -> locale was written out three times,
each with "es" by hand and the deprecated Locale constructor; there is one
now, Locale.of, used by both StringDatabase and LocaleChangeEvent. The
javadoc of getUniqueInstance claimed to create the instance on demand and
the constructor's claimed to load every bundle to check the language, and
neither ever did. ConsiderAutoLocalizationIsValid declared no @Target, so
it could be written on a parameter or a local variable where nothing would
read it; it is now restricted to types, which is where its two users have it.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>